--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/styles": "^4.11.5",
+    "@react-page/editor": "^4.11.1",
+    "@react-page/plugins-image": "^4.11.1",
+    "@react-page/plugins-slate": "^4.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
