--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.5",
+    "@mui/material": "^5.8.2",
     "@react-page/editor": "^4.11.1",
     "@react-page/plugins-image": "^4.11.1",
     "@react-page/plugins-slate": "^4.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3"
+    "react-scripts": "4.0.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
